fixed overlapping css

--- a/public/style.css
+++ b/public/style.css
@@ -181,8 +181,8 @@
 .products-container {
   display: grid;
   grid-template-columns: repeat(3, 1.5fr); /* 3 columns */
-  gap: 30px;
-  margin-left: 10%;
+  gap: 50px;
+
   margin-top: 20px;
   max-width: 100%;
   margin-bottom: 5%;
@@ -689,14 +689,7 @@ width: 100%;
   font-weight: 600;
 
 }
-.products-container{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 15px;
-  margin-top: 20px;
 
-}
 .product-card{
  cursor: pointer;
   transform: scale(1, 1);
@@ -1961,7 +1954,6 @@ padding: 6px;
 }
 
 .image-container{
-  display:flex;
   gap:20px;
   justify-content:center;
   align-items:center;
